# MapaInteractivo

./: .gitignore  README.md  pyproject.toml
data/: Corredor_NorOriental.geojson  Ecu_25.geojson  KBA.geojson  Napo.geojson  Posibles_comunidades.geojson  SNAP.geojson  communities.json  communities_geo.json.bak  corridor_polygon.json  inaturalist_data.json.bak
docs/: index.html
src/yacuwarmi_map/: __init__.py  cli.py
tests/: test_project.py
tools/: build_map.js  build_map.py  debug_dbf.py  download_images.py  export_history.py  extract_colors.py  extract_communities.py  extract_corridor.py  extract_extra_layers.py  extract_full.py  extract_qgis_layers.py  fix_ids.py  fix_ids_2.py  generate_html.py  generate_insets.py  list_communities.ps1  list_layers.py  list_qgis_layers.py  parse_qgis.py  query_inaturalist.py  query_inaturalist_v2.py  read_dbf.py  update_name.py
