[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yacuwarmi-map"
version = "0.1.0"
description = "Construcción reproducible del mapa interactivo Yacu Warmi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pdf = [
  "pillow>=11,<13",
  "playwright>=1.50,<2",
]
geo = [
  "geopandas>=1.0,<2",
  "matplotlib>=3.8,<4",
  "pyogrio>=0.10,<1",
]
dev = ["pytest>=8,<9"]

[project.scripts]
mapa = "yacuwarmi_map.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yacuwarmi_map"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
